@@ -1,60 +1,63 @@
 <?php
-    namespace Perfect_Woocommerce_Brands\Shortcodes;
+namespace Perfect_Woocommerce_Brands\Shortcodes;
 
-    defined( 'ABSPATH' ) or die( 'No script kiddies please!' );
+defined( 'ABSPATH' ) or die( 'No script kiddies please!' );
 
-    class PWB_Carousel_Shortcode{
+class PWB_Carousel_Shortcode{
 
-        public static function carousel_shortcode( $atts ) {
-            $atts = shortcode_atts( array(
-                'items'             => "10",
-                'items_to_show'     => "5",
-                'items_to_scroll'   => "1",
-                'image_size'        => "thumbnail",
-                'autoplay'          => "false",
-                'arrows'            => "false"
-            ), $atts, 'pwb-carousel' );
+  private static $atts;
 
-            $foreach_iterator = 0;
+  public static function carousel_shortcode( $atts ) {
 
-            $atts['autoplay'] = ( $atts['autoplay'] === 'true' ) ? true: false;
-            $atts['arrows'] = ( $atts['arrows'] === 'true' ) ? true: false;
+    self::$atts = shortcode_atts( array(
+        'items'             => "10",
+        'items_to_show'     => "5",
+        'items_to_scroll'   => "1",
+        'image_size'        => "thumbnail",
+        'autoplay'          => "false",
+        'arrows'            => "false"
+    ), $atts, 'pwb-carousel' );
 
-            $slick_settings = array(
-              'slidesToShow'   => (int)$atts['items_to_show'],
-              'slidesToScroll' => (int)$atts['items_to_scroll'],
-              'autoplay'       => (bool)$atts['autoplay'],
-              'arrows'         => (bool)$atts['arrows']
-            );
+    \Perfect_Woocommerce_Brands\Perfect_Woocommerce_Brands::render_template(
+      'carousel',
+      'shortcodes',
+      array( 'slick_settings' => self::slick_settings(), 'brands' => self::brands_data() )
+    );
 
-            ob_start();
-            ?>
+  }
 
-            <div class="pwb-carousel" data-slick='<?php echo json_encode($slick_settings); ?>'>
-            <?php
-            foreach(\Perfect_Woocommerce_Brands\Perfect_Woocommerce_Brands::get_brands() as $brand){
-                if($foreach_iterator>=(int)$atts['items']){
-                    break;
-                }
+  private static function slick_settings(){
 
-                $brand_id = $brand->term_id;
-                $brand_link = get_term_link($brand_id);
+    $slick_settings = array(
+      'slidesToShow'   => (int)self::$atts['items_to_show'],
+      'slidesToScroll' => (int)self::$atts['items_to_scroll'],
+      'autoplay'       => ( self::$atts['autoplay'] === 'true' ) ? true: false,
+      'arrows'         => ( self::$atts['arrows'] === 'true' ) ? true: false
+    );
+    return htmlspecialchars( json_encode( $slick_settings ), ENT_QUOTES, 'UTF-8' );
 
-                $attachment_id = get_term_meta( $brand_id, 'pwb_brand_image', 1 );
-                $attachment_html = $brand->name;
-                if($attachment_id!=''){
-                    $attachment_html = wp_get_attachment_image($attachment_id,$atts['image_size']);
-                }
+  }
 
-                echo '<div>';
-                    echo '<a href="'.$brand_link.'" title="'.__( 'View brand', 'perfect-woocommerce-brands' ).'">'.$attachment_html.'</a>';
-                echo '</div>';
+  private static function brands_data(){
 
-                $foreach_iterator++;
-            }
-            echo '</div>';
+    $brands = array();
+    $foreach_i = 0;
+    foreach( \Perfect_Woocommerce_Brands\Perfect_Woocommerce_Brands::get_brands() as $brand ){
+        if( $foreach_i >= (int)self::$atts['items'] ) break;
 
-            return ob_get_clean();
-        }
+        $brand_id = $brand->term_id;
+        $brand_link = get_term_link($brand_id);
+        $attachment_id = get_term_meta( $brand_id, 'pwb_brand_image', 1 );
+        $attachment_html = $brand->name;
+        if($attachment_id!='') $attachment_html = wp_get_attachment_image( $attachment_id, self::$atts['image_size'] );
 
+        $brands[] = array( 'link' => $brand_link, 'attachment_html' => $attachment_html );
+
+        $foreach_i++;
     }
+
+    return $brands;
+
+  }
+
+}
